<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/Theme.RadioFinland"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
    <ImageView
        android:id="@+id/logoiView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/logodesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        android:src="@drawable/ic_baseline_radio_24" />

    <TextView
        android:id="@+id/titletv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titletext"
        android:textAppearance="@style/Headline_style"
        app:layout_constraintBottom_toTopOf="@+id/freqtv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoiView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/freqtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freqtext"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/Freq_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoiView"
        app:layout_constraintTop_toBottomOf="@+id/titletv" />

    <TextView
        android:id="@+id/detailstv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailstext"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/detail_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freqtv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>